--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-captcha",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "captcha image generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +12,15 @@
   "dependencies": {
     "jimp": "^0.2.24",
     "lodash": "^4.13.1"
+  },
+  "keywords": [
+    "captcha",
+    "image",
+    "generator"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ltempier/node-captcha.git"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
